Restrucutred the report

--- a/Report/tex_files/Bibliography.bib
+++ b/Report/tex_files/Bibliography.bib
@@ -1,3 +1,191 @@
+@inproceedings{carvalho2009clues,
+  title={Clues for detecting irony in user-generated contents: oh...!! it's so easy;-)},
+  author={Carvalho, Paula and Sarmento, Lu{\'\i}s and Silva, M{\'a}rio J and de Oliveira, Eug{\'e}nio},
+  booktitle={Proceedings of the 1st international CIKM workshop on Topic-sentiment analysis for mass opinion},
+  pages={53--56},
+  year={2009},
+  organization={ACM}
+}
+
+@inproceedings{gonzalez2011identifying,
+  title={Identifying sarcasm in Twitter: a closer look},
+  author={Gonz{\'a}lez-Ib{\'a}nez, Roberto and Muresan, Smaranda and Wacholder, Nina},
+  booktitle={Proceedings of the 49th Annual Meeting of the Association for Computational Linguistics: Human Language Technologies: short papers-Volume 2},
+  pages={581--586},
+  year={2011},
+  organization={Association for Computational Linguistics}
+}
+
+@inproceedings{blitzer2007biographies,
+  title={Biographies, bollywood, boom-boxes and blenders: Domain adaptation for sentiment classification},
+  author={Blitzer, John and Dredze, Mark and Pereira, Fernando},
+  booktitle={ACL},
+  volume={7},
+  pages={440--447},
+  year={2007}
+}
+
+@article{ye2009sentiment,
+  title={Sentiment classification of online reviews to travel destinations by supervised machine learning approaches},
+  author={Ye, Qiang and Zhang, Ziqiong and Law, Rob},
+  journal={Expert Systems with Applications},
+  volume={36},
+  number={3},
+  pages={6527--6535},
+  year={2009},
+  publisher={Elsevier}
+}
+
+@inproceedings{choi2008learning,
+  title={Learning with compositional semantics as structural inference for subsentential sentiment analysis},
+  author={Choi, Yejin and Cardie, Claire},
+  booktitle={Proceedings of the Conference on Empirical Methods in Natural Language Processing},
+  pages={793--801},
+  year={2008},
+  organization={Association for Computational Linguistics}
+}
+
+@article{verma2009incorporating,
+  title={Incorporating semantic knowledge for sentiment analysis},
+  author={Verma, Shitanshu and Bhattacharyya, Pushpak},
+  journal={Proceedings of ICON},
+  year={2009}
+}
+
+@article{arhaves,
+  title={The Haves and the Have-Nots: Leveraging Unlabelled Corpora for Sentiment Analysis},
+  author={AR, Kashyap Popat2 Balamurali and Bhattacharyya, Pushpak and Haffari, Gholamreza},
+  year={2009},
+  publisher={ACL}
+}
+
+@incollection{saif2012semantic,
+  title={Semantic sentiment analysis of twitter},
+  author={Saif, Hassan and He, Yulan and Alani, Harith},
+  booktitle={The Semantic Web--ISWC 2012},
+  pages={508--524},
+  year={2012},
+  publisher={Springer}
+}
+
+@article{martin2010word,
+  title={Word sense disambiguation in opinion mining: Pros and cons},
+  author={Mart{\i}n-Wanton, Tamara and Balahur-Dobrescu, Alexandra and Montoyo-Guijarro, Andres and Pons-Porrata, Aurora},
+  journal={Special issue: Natural Language Processing and its Applications},
+  volume={119},
+  pages={358},
+  year={2010}
+}
+
+@inproceedings{rentoumi2009sentiment,
+  title={Sentiment analysis of figurative language using a word sense disambiguation approach},
+  author={Rentoumi, Vassiliki and Giannakopoulos, George and Karkaletsis, Vangelis and Vouros, George A},
+  booktitle={Proceedings of the International Conference RANLP},
+  pages={370--375},
+  year={2009}
+}
+
+@inproceedings{balamurali2011harnessing,
+  title={Harnessing wordnet senses for supervised sentiment classification},
+  author={Balamurali, AR and Joshi, Aditya and Bhattacharyya, Pushpak},
+  booktitle={Proceedings of the Conference on Empirical Methods in Natural Language Processing},
+  pages={1081--1091},
+  year={2011},
+  organization={Association for Computational Linguistics}
+}
+
+@inproceedings{balamurali2011harnessing,
+  title={Harnessing wordnet senses for supervised sentiment classification},
+  author={Balamurali, AR and Joshi, Aditya and Bhattacharyya, Pushpak},
+  booktitle={Proceedings of the Conference on Empirical Methods in Natural Language Processing},
+  pages={1081--1091},
+  year={2011},
+  organization={Association for Computational Linguistics}
+}
+
+@inproceedings{mukherjee2012sentiment,
+  title={Sentiment Analysis in Twitter with Lightweight Discourse Analysis.},
+  author={Mukherjee, Subhabrata and Bhattacharyya, Pushpak},
+  booktitle={COLING},
+  pages={1847--1864},
+  year={2012}
+}
+
+@inproceedings{ruppenhofer2012semantic,
+  title={Semantic frames as an anchor representation for sentiment analysis},
+  author={Ruppenhofer, Josef and Rehbein, Ines},
+  booktitle={Proceedings of the 3rd Workshop in Computational Approaches to Subjectivity and Sentiment Analysis},
+  pages={104--109},
+  year={2012},
+  organization={Association for Computational Linguistics}
+}
+
+@article{wang2005note,
+  title={A note on topical n-grams},
+  author={Wang, Xuerui and McCallum, Andrew},
+  year={2005}
+}
+
+@inproceedings{jo2011aspect,
+  title={Aspect and sentiment unification model for online review analysis},
+  author={Jo, Yohan and Oh, Alice H},
+  booktitle={Proceedings of the fourth ACM international conference on Web search and data mining},
+  pages={815--824},
+  year={2011},
+  organization={ACM}
+}
+
+@inproceedings{zhang2008generation,
+  title={A generation model to unify topic relevance and lexicon-based sentiment for opinion retrieval},
+  author={Zhang, Min and Ye, Xingyao},
+  booktitle={Proceedings of the 31st annual international ACM SIGIR conference on Research and development in information retrieval},
+  pages={411--418},
+  year={2008},
+  organization={ACM}
+}
+
+@incollection{balamurali2013lost,
+  title={Lost in translation: viability of machine translation for cross language sentiment analysis},
+  author={Balamurali, AR and Khapra, Mitesh M and Bhattacharyya, Pushpak},
+  booktitle={Computational Linguistics and Intelligent Text Processing},
+  pages={38--49},
+  year={2013},
+  publisher={Springer}
+}
+
+@inproceedings{mei2007topic,
+  title={Topic sentiment mixture: modeling facets and opinions in weblogs},
+  author={Mei, Qiaozhu and Ling, Xu and Wondra, Matthew and Su, Hang and Zhai, ChengXiang},
+  booktitle={Proceedings of the 16th international conference on World Wide Web},
+  pages={171--180},
+  year={2007},
+  organization={ACM}
+}
+
+@article{turney2002unsupervised,
+  title={Unsupervised learning of semantic orientation from a hundred-billion-word corpus},
+  author={Turney, Peter and Littman, Michael L},
+  year={2002}
+}
+
+@inproceedings{bespalov2011sentiment,
+  title={Sentiment classification based on supervised latent n-gram analysis},
+  author={Bespalov, Dmitriy and Bai, Bing and Qi, Yanjun and Shokoufandeh, Ali},
+  booktitle={Proceedings of the 20th ACM international conference on Information and knowledge management},
+  pages={375--382},
+  year={2011},
+  organization={ACM}
+}
+
+@inproceedings{wang2007topical,
+  title={Topical n-grams: Phrase and topic discovery, with an application to information retrieval},
+  author={Wang, Xuerui and McCallum, Andrew and Wei, Xing},
+  booktitle={Data Mining, 2007. ICDM 2007. Seventh IEEE International Conference on},
+  pages={697--702},
+  year={2007},
+  organization={IEEE}
+}
+
 @article{liu2010sentiment,
   title={Sentiment analysis and subjectivity},
   author={Liu, Bing},
