--- a/Report/tex_files/main.tex
+++ b/Report/tex_files/main.tex
@@ -85,7 +85,7 @@
 \begin{center}
 
 \textsc{\LARGE \univname}\\[1.5cm] % University name
-\textsc{\Large M.Tech Project Stage II}\\[0.5cm] % Thesis type
+\textsc{\Large M.Tech Dissertation}\\[0.5cm] % Thesis type
 
 \HRule \\[0.4cm] % Horizontal line
 {\huge \bfseries \ttitle}\\[0.4cm] % Thesis title
@@ -168,6 +168,9 @@
 %----------------------------------------------------------------------------------------
 
 \setstretch{1.3} % Reset the line-spacing to 1.3 for body text (if it has changed)
+
+\include{approval}
+\include{declaration}
 
 \acknowledgements{\addtocontents{toc}{\vspace{1em}} % Add a gap in the Contents, for aesthetics
 
