Some minute changes in main.tex

--- a/Report/tex_files/approval.tex
+++ b/Report/tex_files/approval.tex
@@ -5,10 +5,11 @@
 %\hyphenpenalty=1000
 %
 %\begin{document}
+
 \begin{center}
 \section*{Dissertation Approval}
 \end{center}
-This dissertation entitled \textbf{``Different approaches to Sentiment Analysis: Topic modeling and Deep Semantics''}, submitted by \textbf{Nikhilkumar Jadhav} \textbf{(Roll No: 123050033)} is approved for the degree of \textbf{Master of Technology} in \textbf{Computer Science} \textbf{and Engineering} from \textbf{Indian Institute of Technology Bombay}.\\
+This dissertation entitled \textbf{``Unsupervised approaches to Sentiment Analysis: Topic modeling and Deep Semantics''}, submitted by \textbf{Nikhilkumar Jadhav} \textbf{(Roll No: 123050033)} is approved for the degree of \textbf{Master of Technology} in \textbf{Computer Science} \textbf{and Engineering} from \textbf{Indian Institute of Technology Bombay}.\\
 \vspace{1.25in}\\
 \begin{center}
 \rule{200pt}{1pt} \\
@@ -22,11 +23,11 @@ Supervisor}
 Dept. of CSE, IIT Bombay \hfill CDAC, Mumbai\\
 Internal Examiner \hfill External Examiner}
 \vspace{1in}
-\begin{center}
-\rule{150pt}{1pt} \\
-\textbf{Prof. Anirudha Joshi\\
-IDC, IIT Bombay\\
-Chairperson}
-\end{center}
+% \begin{center}
+% \rule{150pt}{1pt} \\
+% \textbf{Prof. Anirudha Joshi\\
+% IDC, IIT Bombay\\
+% Chairperson}
+% \end{center}
 
 %\end{document}
