--- a/Report/tex_files/Thesis.cls
+++ b/Report/tex_files/Thesis.cls
@@ -184,7 +184,7 @@
 %	defined as \examname above so you cite it as \examname
 %----------------------------------------------------------------------------------------
 
-\thesistitle{Different approaches to Sentiment Analysis: Topic modeling and Deep Semantics} % Your thesis title - this is used in the title and abstract
+\thesistitle{Unsupervised approaches to Sentiment Analysis: Topic modeling and Deep Semantics} % Your thesis title - this is used in the title and abstract
 %-------------------------------------------------  
 \supervisor{Dr. Pushpak Bhattacharya\textsc{}} % You supervisor's name - this is used in the title page
 %-------------------------------------------------   
