--- a/Report/tex_files/main.tex
+++ b/Report/tex_files/main.tex
@@ -169,8 +169,8 @@
 
 \setstretch{1.3} % Reset the line-spacing to 1.3 for body text (if it has changed)
 
-\include{approval}
-\include{declaration}
+% \include{approval}
+% \include{declaration}
 
 \acknowledgements{\addtocontents{toc}{\vspace{1em}} % Add a gap in the Contents, for aesthetics
 
